added products to carousel

--- a/locales/en.json
+++ b/locales/en.json
@@ -228,7 +228,7 @@
     "giftCardNotFound": "Gift card not found",
     "subtotal": "SUBTOTAl",
     "delivery": "DELIVERY",
-    "free": "Free",
+    "includes": "Includes",
     "vat": "VAT",
     "default": "default",
     "total": "TOTAL",
@@ -254,6 +254,7 @@
     "sizeGuide": "Size Guide",
     "waist": "waist",
     "addToCart": "Add to Cart",
+    "outOfStock": "Out of stock",
     "description": "Description",
     "shippingReturn": "Shipping&Return",
     "internationalShipping": "International Shipping",
