--- a/locales/he.json
+++ b/locales/he.json
@@ -228,7 +228,7 @@
     "giftCardNotFound": "כרטיס מתנה לא נמצא",
     "subtotal": "סיכום ביניים",
     "delivery": "משלוח",
-    "free": "חינם",
+    "includes": "Includes",
     "vat": "מע\"מ",
     "default": "ברירת מחדל",
     "total": "סך הכול",
@@ -254,6 +254,7 @@
     "sizeGuide": "מדריך מידות",
     "waist": "היקף מותניים",
     "addToCart": "הוספה לסל",
+    "outOfStock": "אזל מהמלאי",
     "description": "פרטי מוצר",
     "shippingReturn": "משלוחים והחזרות",
     "internationalShipping": "משלוח בינלאומי",
