added fixies and changing order status

--- a/locales/he.json
+++ b/locales/he.json
@@ -53,7 +53,7 @@
   "myStory": {
     "title": "הסיפור שלי",
     "home": "בית",
-    "content": "נעים להכיר. אני רוטמינה — כינוי הילדות שלי שנשאר איתי. \n\nאני מעצבת אופנה וסטייליסטית אישית. \nאחרי שנים רבות, בחרתי לצלול אל תוך האני האמיתי שלי — הטבע האותנטי שלי — להיפתח אל הדרך הפנימית שלי ולחזור הביתה אל מהות הליבה שלי. \n\nהדרך שאני הולכת בה שזורה בעולמות רבים: רגש וביטוי יצירתי, חיבור עמוק לטבע ולאמנות. לפני עשור, בחרתי בצמחונות כדרך חיים. המעבר הרגיש טבעי ומחובר עמוקות. דרך המסע האישי שלי, בחרתי לראות את מה — ואת מי — שלעתים קרובות נשאר בלתי נראה. \n\nכשאני נושאת את התובנות האלה קדימה, התנועה שלי בעולם שואפת לגלם נוכחות כנה ומחויבות עמוקה לקיימות בכל שכבותיה. אני שואפת לשקיפות ומאמצת את המורכבות והרב-ממדיות של הקיום שלנו. \n\n\nיוצא מהמרחב הזה, רוטמינה היא יותר ממותג אופנה — היא שפה, תהודה אנרגטית, דרך תודעה מעוצבת על ידי אחדות, ותשוקה בוערת תמיד לעומק ואסתטיקה. \n\nאני מעודדת אותך לאמץ את עצמך בביטחון — לבחור בשלמות שמקרינה גם פנימה וגם החוצה — ולהצטרף אליי למסע הזה."
+    "content": "נעים מאוד רותמינה כינוי החיבה שלי מתקופת ילדותי, \nמעצבת אופנה ומלבישה אישית. \n\nאחרי לא מעט שנים בחרתי להעז, לצלול לתוך המים, להיפתח לבית האותנטי שבי ולבחור בנטיית השורש שלי. \n\nהדרך בה אני צועדת היא חיבור בין עולמות, בין רגש ליצירה בין כבוד לטבע ואופנה, לפני כעשור בחרתי טבעונות כדרך חיים, המעבר היה טבעי ומדויק עבורי, מתוך המסע הפרטי שלי בחרתי לראות את מה ומי שלא תמיד נראים.\n\nהתנועה שלי בעולם היא נוכחות כנה לעתיד, עם חיבור עמוק לקיימות על כלל רבדיה, תוך שמירה על שקיפות והבנת הרב ממדיות של קיומנו,\n\nמתוך אלה, רותמינה היא לא רק מותג אופנה, היא שפה, היא חיבור אנרגטי, היא דרך תודעה של אחדות עם תשוקה לעומק ואסתטיקה. \n\nאני מזמינה אותך לחבק את עצמך בביטחון   לבחור איכות שלמה, כזאת שנוגעת בפנים ובחוץ ולקחת חלק במסע יחד איתי."
   },
   "giftCard": {
     "title": "כרטיס מתנה",
