--- a/locales/he.json
+++ b/locales/he.json
@@ -85,7 +85,7 @@
     "meetingOverviewContent": "בשלב הראשון: נתרכז ביש, נלמד יחד את דרך הביטוי והבחירות שלך עד כה,נבחן ונמדוד פריטים מועדפים מארון הבגדים האישי שלך תוך לימוד כלים חדשים לבחירות מדוייקות עבורך על פי יתרונות מבנה גופך, נמיין פריטים שאינם רלוונטיים נוציאם מהארון ונשאיר רק את מה שרלוונטי ונכון עבורך. \n\nבשלב השני: נלמד על סוגי בדים, צבעים מחמיאים לפי גוון עורך, גזרות חיתוכי בגדים שעושים פלאים ועל שילובים מוצלחים יחד מתוך המלתחה הקיימת, נרד לרזולציות קטנות יותר, מהלבשה תחתונה מותאמת עד לגובה מכפלת נכון למידותייך ונדייק מה נדרש להוסיף למלתחה על מנת להשלים אותה לצרכייך. \n\nבסיום התהליך: אנחנו מגדירות את ההווה, מה מתאים למתי איך מחזיקים בגד, מהן הגזרות המתאימות לך על פי מבנה גופך ומהן הבחירות הנכונות עבורך בהתאם למה שתבחרי להנכיח ולשדר. \n\nאת יוצאת עם כלים מעצימים פרקטיים ויישומיים שתוכלי להמשיך ליישם בעצמך בעתיד, כלים שיעניקו לך מראה שמספר את הסיפור שלך באופן הנאמן והבהיר ביותר.",
     "virtualMeeting": "פגישת וידאו",
     "virtualMeetingContent": "פגישה ממוקדת מעשירה ועתירת ידע היא דרך נוספת לדייק אותך-אם יש לך פגישה, אירוע חשוב, ראיון עבודה, פרזנטציה משמעותית או צורך מידי להתחדש ולהרגיש מדויקת ונוכחת. בפגישה נצלול יחד למטרה שלך מתוך מרחב נינוח, נבין את הקונטקסט והמסר שתרצי לשדר ויחד נבנה עבורך מראה חכם נכון ונאמן למי שאת. \n\nבסיום הפגישה ניצור מערכת לבוש מותאמת אישית לאירוע שתכלול את כלל האלמנטים הנדרשים. פרטי לבוש, נעליים ואקססוריז באופן שיתמוך בנוכחותך ובמהות שתבחרי לשדר. \n\nבלב המטרה שלי עומד הרצון להוביל אותך להרגיש שלמה, בטוחה ומובילה-בכל מקום שתבחרי להיות בו.",
-    "online": "אונליין בביתך",
+    "online": "אונליין",
     "atYourHome": "בביתך",
     "duration": "משך זמן:",
     "priceLabel": "מחיר:",
@@ -275,7 +275,7 @@
     "waist": "היקף מותן",
     "waistInstructions": "• הניחי את סרט המדידה סביב החלק הצר ביותר בבטן בדר\"כ מעל הטבור.\n• שמרי על סרט המדידה אופקי (מקביל לרצפה) לא משוחרר או לחוץ מידי.",
     "hips": "היקף ירכיים",
-    "hipsInstructions": "• הניחי את סרט המדידה סביב החלק הרחב ביותר מתחת לאגן בגובה הישבן.\n• ודאי שסרט המדידה אופקי (מקביל לרצפה) לא משוחרר או לחוץ מידי.",
+    "hipsInstructions": "• הניחי את סרט המדידה סביב החלק הרחב ביותר מתחת לאגן בגובה הישבן\n• ודאי שסרט המדידה אופקי (מקביל לרצפה) לא משוחרר או לחוץ מידי.",
     "size": "מידה",
     "bustLabel": "היקף חזה",
     "waistLabel": "היקף מותן",
@@ -306,7 +306,7 @@
     "section4": {
       "title": "4. הזמנת מוצרים ושירותים דרך האתר",
       "4.1": "4.1. כל הרכישות באתר כפופות לזמינות המלאי. במקרה של חוסר במלאי, הלקוח יקבל הודעה ויוכל לבחור להמתין או לבטל את ההזמנה.",
-      "4.2": "4.2. הזמנה תאושר רק לאחר פרעון התשלום במלואו באמצעות כרטיס אשראי Apple pay, Googel pay, ביט ובכפוף לאישור חברת הסליקה.",
+      "4.2": "4.2. הזמנה תאושר רק לאחר פרעון התשלום במלואו באמצעות כרטיס אשראי  Apple pay,Googel pay, ביט  ובכפוף לאישור חברת הסליקה.",
       "4.3": "4.3. מחירי המוצרים כוללים מע\"מ, אלא אם צוין אחרת במפורש."
     },
     "section5": {
@@ -314,7 +314,7 @@
       "5.1": "5.1. המוצרים יסופקו לכתובת הלקוח בהתאם לבחירתו בעת הרכישה.",
       "5.2": "5.2. מועד אספקת המשלוח מוערך בכ- 7 ימי עסקים בהתאם ליעד שנבחר.",
       "5.3": "5.3 ימי עסקים הינם ימי א' עד ה', לא כולל ימי שישי,שבת,שבתון,ערבי חג וימי חג.",
-      "5.4": "5.4. אפשרות לאיסוף עצמי תינתן בתיאום טלפוני ללא עלות."
+      "5.4": "5.4. אפשרות לאיסוף עצמי תינתן בתיאום טלפוני ללא עלות ."
     },
     "section6": {
       "title": "6. הוראות כלליות בעניין משלוחים ואספקת מוצרים",
@@ -352,7 +352,7 @@
     "section12": {
       "title": "12. סמכות שיפוט",
       "12.1": "12.1. על התקנון ותנאי השימוש יחולו אך ורק דיני מדינת ישראל.",
-      "12.2": "12.2. כל מחלוקת שתתגלע בין הצדדים תידון בבתי המשפט המוסמכים במחוז שבו רשומה הנהלת האתר."
+      "12.2": "12.2. כל מחלוקת שתתגלה בין הצדדים תידון בבתי המשפט המוסמכים במחוז שבו רשומה הנהלת האתר."
     },
     "section13": {
       "title": "13. שינויים בתנאי השימוש",
@@ -362,7 +362,7 @@
     "section14": {
       "title": "14. יצירת קשר",
       "14.1": "14.1. נשמח לעמוד לרשותכם לכל שאלה או הבהרה:",
-      "tel": "טלפון: +972-55-994-6060",
+      "tel": "טלפון:055-994-6060",
       "email": "E mail: Brand@rotmina.com"
     }
   },
@@ -423,7 +423,55 @@
   },
   "privacyPolicy": {
     "home": "בית",
-    "privacyPolicy": "מדיניות פרטיות"
+    "privacyPolicy": "מדיניות פרטיות",
+    "title": "מדיניות פרטיות",
+    "intro": "חברת רותמינה מחויבת לשמירה על פרטיות הלקוחות ומידע אישי הנאסף דרך האתר. מדיניות פרטיות זו מסבירה כיצד אנו אוספים, משתמשים, מעבדים ומגנים על המידע שלכם.",
+    "informationCollected": {
+      "title": "סוגי מידע שנאסף",
+      "description": "באתר עשויים להיאסף המידע הבא:",
+      "personalDetails": "פרטים אישיים: שם מלא, כתובת דוא\"ל, מספר טלפון, כתובת למשלוח",
+      "orderPayment": "פרטי הזמנה ותשלום (במידה ושמורים אצלנו)",
+      "filesContent": "קבצים, תמונות או תכנים שהועלו לאתר על ידי בעלי האתר (לא של הלקוח)"
+    },
+    "useOfInformation": {
+      "title": "שימוש במידע",
+      "description": "המידע שנאסף משמש למטרות הבאות:",
+      "processingOrders": "עיבוד והשלמת הזמנות",
+      "customerSupport": "מתן תמיכה ושירות לקוחות",
+      "updatesNewsletter": "שליחת עדכונים על הזמנה, ניוזלטר והטבות ללקוחות",
+      "analysisImprovement": "ניתוח ושיפור חוויית המשתמש באתר"
+    },
+    "sharingInformation": {
+      "title": "העברת מידע לצדדים שלישיים",
+      "description": "על מנת להשלים הזמנות ולספק שירותים, ייתכן שהמידע שלכם יועבר לגורמים חיצוניים, כגון:",
+      "paymentProcessing": "חברות סליקה לצורך תשלום מאובטח",
+      "shippingCompanies": "חברות שילוח להשלמת ההזמנה",
+      "serviceProviders": "ספקי שירות חיצוניים לניהול האתר ושיפור חוויית המשתמש",
+      "noSharing": "אין הפצה של מידע אישי למטרות פרסום או מכירה לצדדים חיצוניים ללא הסכמה מראש."
+    },
+    "customerRights": {
+      "title": "זכויות הלקוח",
+      "description": "לקוחות זכאים:",
+      "requestCopy": "לבקש עותק של המידע האישי שלהם",
+      "updateCorrect": "לעדכן או לתקן מידע אישי שגוי או לא מעודכן",
+      "requestRemoval": "לבקש הסרה של המידע מרשימות דיוור ושיווק",
+      "requestDeletion": "לבקש מחיקה מלאה של המידע האישי שלהם (בהתאם לחוק)"
+    },
+    "dataRetention": {
+      "title": "שמירת מידע",
+      "description": "המידע נשמר בצורה מאובטחת בהתאם לתקנים הנדרשים. אנו שומרים על סודיות המידע ומגנים עליו מפני גישה לא מורשית, שינוי או הפצה."
+    },
+    "disclaimer": {
+      "title": "סייגים ואי-אחריות",
+      "description": "למרות המאמצים להגן על המידע שלכם, לא ניתן להבטיח אבטחה מוחלטת מפני גישה לא מורשית או שימוש לרעה מצד צדדים חיצוניים."
+    },
+    "contact": {
+      "title": "יצירת קשר",
+      "description": "לכל שאלה או בקשה הקשורה לפרטיות המידע, ניתן לפנות אלינו:",
+      "email": "אימייל: Brand@rotmina.com",
+      "phone": "טלפון: 055-994-6060"
+    },
+    "closing": "בברכה,\nרותמינה"
   },
   "notFound": {
     "goToMainPage": "לעמוד הראשי"
