--- a/locales/he.json
+++ b/locales/he.json
@@ -461,6 +461,13 @@
       "title": "שמירת מידע",
       "description": "המידע נשמר בצורה מאובטחת בהתאם לתקנים הנדרשים. אנו שומרים על סודיות המידע ומגנים עליו מפני גישה לא מורשית, שינוי או הפצה."
     },
+    "gdprCompliance": {
+      "title": "",
+      "description": "",
+      "accessCorrectDelete": "",
+      "restrictObject": "",
+      "withdrawConsent": ""
+    },
     "disclaimer": {
       "title": "סייגים ואי-אחריות",
       "description": "למרות המאמצים להגן על המידע שלכם, לא ניתן להבטיח אבטחה מוחלטת מפני גישה לא מורשית או שימוש לרעה מצד צדדים חיצוניים."
