--- a/locales/en.json
+++ b/locales/en.json
@@ -41,7 +41,7 @@
     "termsOfUse": "Terms of conditions",
     "privacyPolicy": "Privacy Policy",
     "shippingAndReturns": "Shipping & Returns",
-    "paymentAndDelivery": "Payment & Delivery"
+    "paymentAndDelivery": "Returns & Exchanges"
   },
   "newsletter": {
     "signUpForUpdates": "Sign up for updates",
@@ -252,17 +252,26 @@
     "colour": "Colour",
     "size": "Size",
     "sizeGuide": "Size Guide",
-    "waist": "waist",
+    "bust": "Bust",
+    "waist": "Waist",
+    "hips": "Hips",
     "addToCart": "Add to Cart",
     "outOfStock": "Out of stock",
     "description": "Description",
     "shippingReturn": "Shipping&Return",
     "internationalShipping": "International Shipping",
-    "shippingDescription": "Shipping is available to the United States, Canada, and Europe only, and typically arrives within 7–15 business days.",
+    "shippingTitle": "International Shipping",
+    "shippingSubtitle": "Shipping",
+    "shippingText": "Shipping is available worldwide at a flat rate of 165 ILS, approximately $47–$50 USD. Price may vary depending on exchange rate. Delivery typically takes 7–15 business days.",
+    "orderProcessingTitle": "Order Processing",
+    "orderProcessingText": "All orders are processed within 1-2 business days. Customers are responsible for providing accurate shipping information to ensure timely delivery. Once the order is confirmed, customers will receive a confirmation email.",
+    "returnsExchanges": "Returns & Exchanges",
+    "returnsExchangesTitle": "Returns & Exchanges",
+    "returnsExchangesTextBefore": "If you would like to return an item, please fill out the ",
+    "returnsExchangesFormLink": "return form",
+    "returnsExchangesTextAfter": " within 14 days of receiving your package. Items that have been used or worn cannot be returned or exchanged. Clothing items may only be exchanged if they still carry their original tags.\n\nOnce the item is received in its original condition, a full refund will be issued, excluding shipping costs. Customers are responsible for return shipping costs unless the item is defective or incorrect.\n\nRefunds are processed within up to 3 business days after the returned item is received and inspected. Customers will be notified via email once the refund has been issued, confirming that the returned item has been accepted and the refund completed. Refunds are issued via the original payment method\n\nPlease note that additional local fees may apply depending on the destination country's policies.",
     "shippingCosts": "Shipping Costs:",
     "destination": "Destination",
-    "returnsExchanges": "Returns & Exchanges",
-    "returnsDescription": "If you like to return an item, please fill out the return form within 14 days of receiving your package. Items that have been used or worn cannot be returned or exchanged. Clothing items may be exchanged only if they still carry their original tag. Once the item is received in its original condition, you'll receive a full refund, excluding shipping costs. In cases of return or exchange, shipping costs are the customer's responsibility.",
     "europeanSurcharge": "In the following European countries: Andorra, Austria, Gibraltar, Ireland, Monaco, Greece, and Portugal a 12 $ surcharge applies for shipments weighing 3 kg only. All orders are prepared for shipment within 1–2 business days from my studio in Israel.",
     "importantNote": "Important: Additional local fees may apply depending on the customs policies of the destination country",
     "youMightAlsoLike": "You might also like"
@@ -477,7 +486,36 @@
       "email": "Email: Brand@rotmina.com",
       "phone": "Phone: +972-55-994-6060"
     },
-    "closing": "Sincerely,\nRotmina"
+    "closing": "Sincerely,\nRotmina",
+    "accessibility": {
+      "title": "Accessibility Statement",
+      "intro": "Rotmina is an Israeli fashion brand committed to providing an accessible and user-friendly browsing experience for all customers, including people with disabilities. Accessibility is a core value, and we strive to ensure that everyone can use our website effectively, in accordance  with the Equal Rights for Persons with Disabilities Regulations (2013) and Israeli AA-level accessibility  standards.",
+      "featuresTitle": "Accessibility Features",
+      "featuresDescription": "The website includes various accessibility adaptations, including:",
+      "feature1": "Supports all standard browsers (Chrome, Firefox, Safari, Edge, Opera)",
+      "feature2": "Keyboard navigation (TAB moves to the next element, ENTER activates links)",
+      "feature3": "Clear and hierarchical content structure using headings, paragraphs, and lists",
+      "feature4": "Readable text and simple language",
+      "feature5": "Color contrast optimized for users with visual impairments",
+      "feature6": "Text descriptions (alt text) for images and graphical elements",
+      "feature7": "Responsive design for various screen resolutions",
+      "feature8": "Controls to play/pause galleries and videos",
+      "feature9": "ARIA support for screen readers",
+      "feature10": "Accessible menus, forms, and navigation components",
+      "additionalTitle": "Additional Adaptations for Users with Visual or Hearing Impairments:",
+      "additional1": "Text resizing using CTRL + \"+\" / CTRL + \"-\"",
+      "additional2": "Compatible with screen readers and voice recognition software",
+      "additional3": "The website does not include flashing or blinking content",
+      "limitationsTitle": "Accessibility Limitations",
+      "limitationsText": "We make every effort to ensure that all pages of our website are fully accessible. However, some pages or components may not yet be fully accessible. Additionally, third-party content embedded on the site may not be completely accessible",
+      "problemTitle": "Encountered a Problem",
+      "problemSubtitle": "We're here to help!",
+      "problemText": "If you experience difficulty using the website or have suggestions for improvement, please contact us:",
+      "problemEmail": "Email: Brand@rotmina.com",
+      "problemPhone": "Phone: +972-55-994-6060",
+      "problemHours": "Customer service hours: Sunday–Thursday, 10:00–16:00",
+      "problemClosing": "Best regards,\nRotmina"
+    }
   },
   "notFound": {
     "goToMainPage": "Go to mainpage"
