--- a/locales/he.json
+++ b/locales/he.json
@@ -41,7 +41,7 @@
     "termsOfUse": "תנאי שימוש",
     "privacyPolicy": "מדיניות פרטיות",
     "shippingAndReturns": "משלוחים והחזרות",
-    "paymentAndDelivery": "תשלום ומשלוח"
+    "paymentAndDelivery": "החזרות והחלפות"
   },
   "newsletter": {
     "signUpForUpdates": "הירשמו לעדכונים",
@@ -252,17 +252,28 @@
     "colour": "צבע",
     "size": "מידה",
     "sizeGuide": "מדריך מידות",
+    "bust": "היקף חזה",
     "waist": "היקף מותניים",
+    "hips": "היקף ירכיים",
     "addToCart": "הוספה לסל",
     "outOfStock": "אזל מהמלאי",
     "description": "פרטי מוצר",
     "shippingReturn": "משלוחים והחזרות",
     "internationalShipping": "משלוח בינלאומי",
-    "shippingDescription": "משלוח זמין לארצות הברית, קנדה ואירופה בלבד, ומגיע בדרך כלל תוך 7-15 ימי עסקים.",
+    "shippingTitle": "משלוחים והחזרות",
+    "shippingSubtitle": "",
+    "shippingText": "",
+    "orderProcessingTitle": "",
+    "orderProcessingText": "",
+    "shippingIsraelTitle": "משלוחים והחזרות בישראל:",
+    "shippingIsraelText": "משלוח חינם עם שליח עד הבית/מקום עבודה בכל הזמנה מעל 499 ₪\n\nבקניה מתחת ל 499 ש\"ח עלות המשלוח הינה 30 ש\"ח.\n\nעם קליטת ההזמנה במערכת ישלח אישור הזמנה במייל עם מספר ההזמנה.\n\nביום הגעת החבילה תקבלי הודעה מחברת השליחויות לתיאום מסירה.",
+    "returnsExchanges": "החזרות והחלפות",
+    "returnsExchangesTitle": "החזרות והחלפות",
+    "returnsExchangesTextBefore": "יתאפשרו עד 14 יום מיום קבלת ההזמנה, דרך ",
+    "returnsExchangesFormLink": "טופס החזרות והחלפות",
+    "returnsExchangesTextAfter": "\n\n-במידה ותבחרי להחזיר פריט באמצעות שליח - דמי משלוח על סך 30 ₪ יקוזזו מסכום הזיכוי, תיאום המשלוח יתבצע דרך שירות הלקוחות.\n\n-במקרים של מבצעים והנחות יינתן החזר על סכום הפריט בעת הקנייה.\n\n-לא ניתן להחליף או להחזיר פריטים שנעשה בהם שימוש, פריטי לבוש יוחלפו אך ורק אם הם נושאים את התווית המקורית.\n\n-ניתן לקבל זיכוי לחנות, החזר כספי יתבצע לאמצעי תשלום בו בוצעה העסקה, עד 10 ימי עסקים מיום הקבלת המוצר, החזר כספי לכרטיס האשראי יופיע בפירוט האשראי תוך 21 ימי עסקים.",
     "shippingCosts": "עלויות משלוח:",
     "destination": "יעד",
-    "returnsExchanges": "החזרות והחלפות",
-    "returnsDescription": "אם תרצי להחזיר פריט, אנא מלאי את טופס ההחזרה תוך 14 יום ממועד קבלת החבילה. פריטים שנעשה בהם שימוש או שנלבשו לא ניתן להחזיר או להחליף. פריטי לבוש יוחלפו רק אם הם עדיין נושאים את התווית המקורית. ברגע שהפריט מתקבל במצבו המקורי, תקבלי החזר מלא, למעט עלויות משלוח. במקרים של החזרה או החלפה, עלויות המשלוח הן באחריות הלקוחה.",
     "europeanSurcharge": "במדינות אירופיות הבאות: אנדורה, אוסטריה, גיברלטר, אירלנד, מונקו, יוון ופורטוגל חל תוספת של 12 $ למשלוחים במשקל 3 ק\"ג בלבד. כל ההזמנות מוכנות למשלוח תוך 1-2 ימי עסקים מהסטודיו שלי בישראל.",
     "importantNote": "חשוב: עלויות מקומיות נוספות עשויות לחול בהתאם למדיניות המכס של מדינת היעד",
     "youMightAlsoLike": "מוזמנת להתרשם"
@@ -478,7 +489,36 @@
       "email": "אימייל: Brand@rotmina.com",
       "phone": "טלפון: 055-994-6060"
     },
-    "closing": "בברכה,\nרותמינה"
+    "closing": "בברכה,\nרותמינה",
+    "accessibility": {
+      "title": "הצהרת נגישות:",
+      "intro": "חברת רותמינה הינה חברת אופנה המוכרת הלבשה המיוצרת בישראל מחויבים לאפשר חוויית גלישה נגישה ונוחה לכל לקוחותינו, כולל אנשים עם מוגבלויות. אנו רואים בנגישות ערך עליון ופועלים כדי להבטיח שכל אדם יוכל להשתמש באתר שלנו בצורה מיטבית, בהתאם לתקנות שוויון זכויות לאנשים עם מוגבלות (התאמות נגישות לשירות) התשע\"ג-2013 ולתקן הישראלי ברמת AA.",
+      "featuresTitle": "התאמות הנגישות באתר:",
+      "featuresDescription": "באתר בוצעו התאמות נגישות שונות, בהן:",
+      "feature1": "תמיכה בגלישה בכל הדפדפנים התקניים (Chrome, Firefox, Safari, Edge, Opera).",
+      "feature2": "ניווט נוח באמצעות מקלדת  לחיצה על מקש \"TAB\" תעביר את הסמן לאלמנט הבא, ו-\"Enter\" יפעיל את הקישור.",
+      "feature3": "תוכן ברור, היררכי ומאורגן שימוש בכותרות, פסקאות ורשימות לסיוע בהתמצאות.",
+      "feature4": "טקסטים קריאים ושפה פשוטה.",
+      "feature5": "ניגודיות צבעים מותאמת לשיפור הקריאות עבור אנשים עם לקויות ראייה.",
+      "feature6": "תיאורים טקסטואליים (alt text) לתמונות ולרכיבים גרפיים.",
+      "feature7": "התאמת האתר לשימוש ברזולוציות מסכים שונות (רספונסיביות).",
+      "feature8": "כפתורי שליטה להפעלת/עצירת גלריות וסרטונים.",
+      "feature9": "שימוש בטכנולוגיית ARIA לתמיכה בקוראי מסך.",
+      "feature10": "הנגשת תפריטים, טפסים ורכיבי ניווט נוספים.",
+      "additionalTitle": "התאמות נוספות למשתמשים עם לקויות ראייה ושמיעה:",
+      "additional1": "אפשרות להגדלת והקטנת גודל הטקסט באמצעות שימוש במקשי \"CTRL\" + \"+\" או \"CTRL\" + \"-\".",
+      "additional2": "תמיכה בתוכנות קוראות מסך ותוכנות זיהוי קולי.",
+      "additional3": "האתר אינו כולל תוכן מרצד או מהבהב.",
+      "limitationsTitle": "סייגים לנגישות",
+      "limitationsText": "אנו עושים מאמצים רבים להבטיח שכל דפי האתר יהיו מונגשים במלואם, אך ייתכן כי קיימים עמודים מסוימים או רכיבים שטרם הונגשו באופן מלא. כמו כן, ייתכן שבמודעות חיצוניות שהוטמעו באתר לא הושלמה ההנגשה במלואה.",
+      "problemTitle": "נתקלתם בבעיה",
+      "problemSubtitle": "אנחנו כאן כדי לעזור!",
+      "problemText": "אם נתקלתם בקושי בשימוש באתר או שיש לכם הצעה לשיפור, נשמח לשמוע מכם ולטפל בכך בהקדם.",
+      "problemEmail": "מייל: Brand@rotmina.com",
+      "problemPhone": "טלפון: 055-994-6060",
+      "problemHours": "שעות פעילות שירות הלקוחות: ימים א'-ה', 10:00-16:00.",
+      "problemClosing": "בברכה,\nרותמינה."
+    }
   },
   "notFound": {
     "goToMainPage": "לעמוד הראשי"
