--- a/locales/en.json
+++ b/locales/en.json
@@ -420,7 +420,8 @@
     "title": "Love to hear from you",
     "instagram": "Instagram",
     "facebook": "Facebook",
-    "email": "Email",
+    "phone": "+972-55-994-6060",
+    "email": "Brand@rotmina.com",
     "description": "Have a question, thought or something you would like to share? <br /> You are welcome to reach out. I read every message and will get back to you as soon as possible.",
     "name": "NAME",
     "emailPlaceholder": "EMAIL",
