--- a/locales/he.json
+++ b/locales/he.json
@@ -422,7 +422,8 @@
     "title": "אשמח לשמוע ממך",
     "instagram": "אינסטגרם",
     "facebook": "פייסבוק",
-    "email": "אימייל",
+    "phone": "972-55-994-6060+",
+    "email": "Brand@rotmina.com",
     "description": "יש לך שאלות או משוב? מוזמנת לפנות אלינו. שלחו לנו את ההודעה בשדה למטה ונחזור אליכם בהקדם.",
     "name": "שם",
     "emailPlaceholder": "אימייל",
