--- a/locales/he.json
+++ b/locales/he.json
@@ -39,7 +39,7 @@
     "send": "שליחה",
     "contact": "צור קשר",
     "termsOfUse": "תנאי שימוש",
-    "privacyPolicy": "מדיניות פרטיות",
+    "privacyPolicy": "פרטיות & נגישות",
     "shippingAndReturns": "משלוחים והחזרות",
     "paymentAndDelivery": "החזרות והחלפות"
   },
@@ -119,7 +119,7 @@
   "home": {
     "separation": {
       "title": "נפרדות",
-      "content": "יש רגע שבו העצמי מבקש הבדל-,\nמרחק בריא, בין אני ואת, אני ואתה, בין העצמי והעולם\nלא כדי לברוח, אלא כדי להתחיל להיות.\n\nהקולקציה הזו נולדה מתוך תהליך פנימי עמוק,\nמסע של נפרדות.\n\nנפרדות או ספרציה, הוא מושג מעולם הפסיכולוגיה ההתפתחותית,\nזהו שלב ראשוני, שבו הילד מתחיל להבין שהוא נפרד מהאם,\nשיש לו רצונות, רגשות ותחושות משלו - שהוא אינו המשך ישיר שלה.\n\nזהו תהליך בריא, עדין ולעיתים מטלטל - בין חיבור לניתוק, בין ביטחון לתלות, בין קרבה לריחוק,\nבין חיפוש אחר עצמאות לצד כמיהה לאחדות.\n\nאת המסע הזה תרגמתי לבדים, לצורות, לקווים,\nפריטים שמבטאים את התנועה הזו - סגירות מול פתיחות, רכות מול נוקשות,\nמבנים שמחזיקים את הגוף אך מבקשים חופש,\nכמו הנפש – שמבקשת גבול, אך לא סגור.\n\nהקולקציה הזו היא סיפור של נפרדות מחוברת.\nקול פנימי שמבקש להיות."
+      "content": "יש רגע שבו העצמי מבקש הבדל,\nמרחק בריא, בין אני ואת, אני ואתה, בין העצמי והעולם\n\nלא כדי לברוח, אלא כדי להתחיל להיות.\n\nהקולקציה הזו נולדה מתוך תהליך פנימי עמוק,\nמסע של נפרדות.\n\nנפרדות או ספרציה, הוא מושג מעולם הפסיכולוגיה ההתפתחותית,\nזהו שלב ראשוני, שבו הילד מתחיל להבין שהוא נפרד מהאם,\nשיש לו רצונות, רגשות ותחושות משלו, שהוא אינו המשך ישיר שלה.\n\nזהו תהליך בריא, עדין ולעיתים מטלטל, בין חיבור לניתוק, בין ביטחון לתלות, בין קרבה לריחוק,\nבין חיפוש אחר עצמאות לצד כמיהה לאחדות.\n\nאת המסע הזה תרגמתי לבדים, לצורות, לקווים,\nפריטים שמבטאים את התנועה הזו; סגירות מול פתיחות, רכות מול נוקשות,\nמבנים שמחזיקים את הגוף אך מבקשים חופש,\nכמו הנפש - שמבקשת גבול, אך לא סגור.\n\nהקולקציה הזו היא סיפור של נפרדות מחוברת,\nקול פנימי שמבקש להיות."
     },
     "ethics": {
       "title": "רותמינה - בין יופי לאתיקה",
@@ -411,7 +411,7 @@
     "orderNumber": "מספר הזמנה באתר",
     "orderNumberDescription": "*המספר מופיע ליד פרטי הלקוחה בחשבונית",
     "comment": "תגובה",
-    "selectOption": "בחרי אחת מן האפשרויות",
+    "selectOption": "בחרי אחת מן האפשרויות:",
     "iWantToExchange": "אני רוצה להחליף",
     "iWantToReturn": "אני רוצה להחזיר",
     "returnOrExchange": "החזרה או החלפה"
@@ -436,7 +436,7 @@
   },
   "privacyPolicy": {
     "home": "בית",
-    "privacyPolicy": "מדיניות פרטיות",
+    "privacyPolicy": "פרטיות & נגישות",
     "title": "מדיניות פרטיות",
     "intro": "חברת רותמינה מחויבת לשמירה על פרטיות הלקוחות ומידע אישי הנאסף דרך האתר. מדיניות פרטיות זו מסבירה כיצד אנו אוספים, משתמשים, מעבדים ומגנים על המידע שלכם.",
     "informationCollected": {
@@ -493,7 +493,7 @@
     },
     "closing": "בברכה,\nרותמינה",
     "accessibility": {
-      "title": "הצהרת נגישות:",
+      "title": "הצהרת נגישות",
       "intro": "חברת רותמינה הינה חברת אופנה המוכרת הלבשה המיוצרת בישראל מחויבים לאפשר חוויית גלישה נגישה ונוחה לכל לקוחותינו, כולל אנשים עם מוגבלויות. אנו רואים בנגישות ערך עליון ופועלים כדי להבטיח שכל אדם יוכל להשתמש באתר שלנו בצורה מיטבית, בהתאם לתקנות שוויון זכויות לאנשים עם מוגבלות (התאמות נגישות לשירות) התשע\"ג-2013 ולתקן הישראלי ברמת AA.",
       "featuresTitle": "התאמות הנגישות באתר:",
       "featuresDescription": "באתר בוצעו התאמות נגישות שונות, בהן:",
