added colecction page

--- a/locales/he.json
+++ b/locales/he.json
@@ -265,13 +265,13 @@
     "shippingText": "",
     "orderProcessingTitle": "",
     "orderProcessingText": "",
-    "shippingIsraelTitle": "משלוחים והחזרות בישראל:",
-    "shippingIsraelText": "משלוח חינם עם שליח עד הבית/מקום עבודה בכל הזמנה מעל 499 ₪\n\nבקניה מתחת ל 499 ש\"ח עלות המשלוח הינה 30 ש\"ח.\n\nעם קליטת ההזמנה במערכת ישלח אישור הזמנה במייל עם מספר ההזמנה.\n\nביום הגעת החבילה תקבלי הודעה מחברת השליחויות לתיאום מסירה.",
+    "shippingIsraelTitle": "משלוחים והחזרות בישראל",
+    "shippingIsraelText": "משלוח חינם עם שליח עד הבית/מקום עבודה בכל הזמנה מעל 499 ₪\nבקניה מתחת ל 499 ש\"ח עלות המשלוח הינה 30 ש\"ח.\nעם קליטת ההזמנה במערכת ישלח אישור הזמנה במייל עם מספר ההזמנה.\nביום הגעת החבילה תקבלי הודעה מחברת השליחויות לתיאום מסירה.",
     "returnsExchanges": "החזרות והחלפות",
     "returnsExchangesTitle": "החזרות והחלפות",
     "returnsExchangesTextBefore": "יתאפשרו עד 14 יום מיום קבלת ההזמנה, דרך ",
     "returnsExchangesFormLink": "טופס החזרות והחלפות",
-    "returnsExchangesTextAfter": "\n\n-במידה ותבחרי להחזיר פריט באמצעות שליח - דמי משלוח על סך 30 ₪ יקוזזו מסכום הזיכוי, תיאום המשלוח יתבצע דרך שירות הלקוחות.\n\n-במקרים של מבצעים והנחות יינתן החזר על סכום הפריט בעת הקנייה.\n\n-לא ניתן להחליף או להחזיר פריטים שנעשה בהם שימוש, פריטי לבוש יוחלפו אך ורק אם הם נושאים את התווית המקורית.\n\n-ניתן לקבל זיכוי לחנות, החזר כספי יתבצע לאמצעי תשלום בו בוצעה העסקה, עד 10 ימי עסקים מיום הקבלת המוצר, החזר כספי לכרטיס האשראי יופיע בפירוט האשראי תוך 21 ימי עסקים.",
+    "returnsExchangesTextAfter": "\n-במידה ותבחרי להחזיר פריט באמצעות שליח - דמי משלוח על סך 30 ₪ יקוזזו מסכום הזיכוי, תיאום המשלוח יתבצע דרך שירות הלקוחות.\n-במקרים של מבצעים והנחות יינתן החזר על סכום הפריט בעת הקנייה.\n-לא ניתן להחליף או להחזיר פריטים שנעשה בהם שימוש, פריטי לבוש יוחלפו אך ורק אם הם נושאים את התווית המקורית.\n-ניתן לקבל זיכוי לחנות, החזר כספי יתבצע לאמצעי תשלום בו בוצעה העסקה, עד 10 ימי עסקים מיום הקבלת המוצר, החזר כספי לכרטיס האשראי יופיע בפירוט האשראי תוך 21 ימי עסקים.",
     "shippingCosts": "עלויות משלוח:",
     "destination": "יעד",
     "europeanSurcharge": "במדינות אירופיות הבאות: אנדורה, אוסטריה, גיברלטר, אירלנד, מונקו, יוון ופורטוגל חל תוספת של 12 $ למשלוחים במשקל 3 ק\"ג בלבד. כל ההזמנות מוכנות למשלוח תוך 1-2 ימי עסקים מהסטודיו שלי בישראל.",
