--- a/locales/he.json
+++ b/locales/he.json
@@ -119,11 +119,11 @@
   "home": {
     "separation": {
       "title": "נפרדות",
-      "content": "יש רגע שבו העצמי מבקש הבדל,\nמרחק בריא, בין אני ואת, אני ואתה, בין העצמי והעולם\n\nלא כדי לברוח, אלא כדי להתחיל להיות.\n\nהקולקציה הזו נולדה מתוך תהליך פנימי עמוק,\nמסע של נפרדות.\n\nנפרדות או ספרציה, הוא מושג מעולם הפסיכולוגיה ההתפתחותית,\nזהו שלב ראשוני, שבו הילד מתחיל להבין שהוא נפרד מהאם,\nשיש לו רצונות, רגשות ותחושות משלו, שהוא אינו המשך ישיר שלה.\n\nזהו תהליך בריא, עדין ולעיתים מטלטל, בין חיבור לניתוק, בין ביטחון לתלות, בין קרבה לריחוק,\nבין חיפוש אחר עצמאות לצד כמיהה לאחדות.\n\nאת המסע הזה תרגמתי לבדים, לצורות, לקווים,\nפריטים שמבטאים את התנועה הזו; סגירות מול פתיחות, רכות מול נוקשות,\nמבנים שמחזיקים את הגוף אך מבקשים חופש,\nכמו הנפש - שמבקשת גבול, אך לא סגור.\n\nהקולקציה הזו היא סיפור של נפרדות מחוברת,\nקול פנימי שמבקש להיות."
+      "content": "יש רגע שבו העצמי מבקש הבדל,מרחק בריא, בין אני ואת, אני ואתה, בין העצמי והעולם לא כדי לברוח, אלא כדי להתחיל להיות.\n\nהקולקציה הזו נולדה מתוך תהליך פנימי עמוק, מסע של נפרדות.\n\nנפרדות או ספרציה, הוא מושג מעולם הפסיכולוגיה ההתפתחותית, זהו שלב ראשוני, שבו הילד מתחיל להבין שהוא נפרד מהאם, שיש לו רצונות, רגשות ותחושות משלו, שהוא אינו המשך ישיר שלה. זהו תהליך בריא, עדין ולעיתים מטלטל, בין חיבור לניתוק, בין ביטחון לתלות, בין קרבה לריחוק, בין חיפוש אחר עצמאות לצד כמיהה לאחדות.\n\nאת המסע הזה תרגמתי לבדים, לצורות, לקווים, פריטים שמבטאים את התנועה הזו; סגירות מול פתיחות, רכות מול נוקשות, מבנים שמחזיקים את הגוף אך מבקשים חופש,כמו הנפש - שמבקשת גבול, אך לא סגור.\n\nהקולקציה הזו היא סיפור של נפרדות מחוברת, קול פנימי שמבקש להיות."
     },
     "ethics": {
       "title": "רותמינה - בין יופי לאתיקה",
-      "content": "רותמינה נוסדה מתוך תשוקה ומחויבות עמוקה להגינות\nכלפי בעל החיים, הטבע ובני האדם -שיקוף מתוך הדרך בה\nאני בוחרת להתקיים בעולם.\n\nהבחירות שלי אינן רק אופנתיות, הן מוסריות,\nהן בחירות המכבדות חיים, נוגעות באדמה ונובעות מאהבה.\n\nכל פריט נוצר ממודעות נוכחת, ללא שימוש בחומרים מן מהחי,\nמתוך חשיבה, כבוד ותשומת לב למה שמחבר בין\nיופי חמלה וקיימות.\n\nעבורי יופי אמיתי אינו פוגע ואינו נעשה על חשבון\nהחיים, כך נולדת יצירה שמלטפת את הגוף מבלי\nלפגוע בנשמה.",
+      "content": "רותמינה נוסדה מתוך תשוקה ומחויבות עמוקה להגינות כלפי בעל החיים, הטבע ובני האדם -שיקוף מתוך הדרך בה אני בוחרת להתקיים בעולם.\n\nהבחירות שלי אינן רק אופנתיות, הן מוסריות, הן בחירות המכבדות חיים, נוגעות באדמה ונובעות מאהבה.\n\nכל פריט נוצר ממודעות נוכחת, ללא שימוש בחומרים מן מהחי, מתוך חשיבה, כבוד ותשומת לב למה שמחבר בין יופי חמלה וקיימות.\n\nעבורי יופי אמיתי אינו פוגע ואינו נעשה על חשבון החיים, כך נולדת יצירה שמלטפת את הגוף מבלי לפגוע בנשמה.",
       "crueltyFree": "Cruelty free",
       "vegan": "Vegan"
     },
