--- a/locales/he.json
+++ b/locales/he.json
@@ -175,6 +175,11 @@
     "exploreMore": "גלי עוד",
     "payForOrder": "שלם עבור ההזמנה"
   },
+  "successPayment": {
+    "title": "התשלום בוצע בהצלחה!",
+    "thankYou": "תודה שבחרת ברוטמינה. ההזמנה שלך נארזת בקפידה ותישלח בקרוב.",
+    "exploreMore": "גלי עוד"
+  },
   "cartPage": {
     "home": "בית",
     "cartBreadcrumb": "העגלה שלך",
@@ -321,7 +326,7 @@
       "4.3": "4.3. מחירי המוצרים כוללים מע\"מ, אלא אם צוין אחרת במפורש."
     },
     "section5": {
-      "title": "5. משלוח ואיסוף עצמי בישראל",
+      "title": "5. משלוח  ואיסוף עצמי בישראל",
       "5.1": "5.1. המוצרים יסופקו לכתובת הלקוח בהתאם לבחירתו בעת הרכישה.",
       "5.2": "5.2. מועד אספקת המשלוח מוערך בכ- 7 ימי עסקים בהתאם ליעד שנבחר.",
       "5.3": "5.3 ימי עסקים הינם ימי א' עד ה', לא כולל ימי שישי,שבת,שבתון,ערבי חג וימי חג.",
@@ -337,7 +342,8 @@
       "title": "7. מדיניות ביטול והחזרת מוצרים",
       "7.1": "7.1. הלקוח רשאי להחזיר פריט תוך 14 ימים מקבלת המוצר, על פי חוק הגנת הצרכן לאחר מילוי טופס החזרות, בתנאי שלא נעשה בו שימוש, המוצר אינו פגום והוא נושא את התווית המקורית.",
       "7.2": "7.2. ניתן לקבל זיכוי לחנות או החזר כספי אשר יבוצע באותו אמצעי תשלום בו בוצעה הרכישה עד 12 ימי עסקים מיום קבלת הפריט. החזר כספי לכרטיס אשראי יופיע בפירוט האשראי תוך 21 ימי עסקים.",
-      "7.3": "7.3. במידה ותבחרי להחזיר פריט דרך שליח, דמי המשלוח יקוזזו מעלות הפריט - בעלות דמי משלוח של 30 ₪, אשר יקוזזו מסכום הזיכוי. תיאום המשלוח יתבצע דרכנו."
+      "7.3": "7.3. במידה ותבחרי להחזיר פריט דרך שליח, דמי המשלוח יקוזזו מעלות הפריט - בעלות דמי משלוח של 30 ₪, אשר יקוזזו מסכום הזיכוי. תיאום המשלוח יתבצע דרכנו.",
+      "7.4": "7.4. מדיניות ביטול והחזרת מוצרים לא תקינים - במידה ולקוח/ה מקבל/ת מוצר לא תקין, רשאי/ת הלקוח/ה ליצור קשר עם שירות הלקוחות של החברה מיד עם קבלת המשלוח, ולהעביר צילום ברור של הפגם או התקלה באמצעות דואר אלקטרוני או הודעת WhatsApp. לאחר קבלת הפנייה והצילום, החברה תבחן את הנושא ותטפל במקרה בהתאם, לרבות החלפת המוצר, זיכוי או כל פתרון אחר לפי שיקול דעתה."
     },
     "section8": {
       "title": "8. קישורים, פרסומות והפניות מהאתר",
@@ -371,12 +377,17 @@
       "13.2": "13.2. שימוש מתמשך באתר לאחר עדכון התקנון יהווה הסכמה לתנאים החדשים."
     },
     "section14": {
-      "title": "14. יצירת קשר",
-      "14.1": "14.1. נשמח לעמוד לרשותכם לכל שאלה או הבהרה:",
-      "tel": "טלפון:055-994-6060",
-      "email": "E mail: Brand@rotmina.com"
+      "title": "14.מדיניות פרטיות",
+      "14.1": "14.1. מדיניות הפרטיות של האתר מהווה חלק בלתי נפרד מתקנון זה וכל שימוש באתר כפוף גם להוראות המפורטות בה"
     },
-    "fullText": "1. כללי\n\n1.1. תקנון זה מהווה הסכם משפטי מחייב בין המשתמשים באתר לבין הנהלת האתר (להלן: \"האתר\").\n\n1.2. כל כניסה לאתר, גלישה, רישום, ביצוע רכישה או כל שימוש אחר באתר מהווים הסכמה מלאה לתנאי התקנון.\n\n1.3. הנהלת האתר רשאית לעדכן את התקנון מעת לעת, לפי שיקול דעתה הבלעדי וללא צורך בהודעה מוקדמת.\n\n1.4. בכל מקרה של סתירה בין תקנון זה לבין כל פרסום אחר, יגברו תנאי התקנון.\n\n2. תנאי שימוש וגישה לאתר\n\n2.1. השימוש באתר מותר למי שמלאו לו 18 שנים. קטינים מתחת לגיל 18 רשאים לבצע רכישות רק באישור הורה או אפוטרופוס.\n\n2.2. האתר מיועד לשימוש אישי בלבד, ואין לעשות בו שימוש מסחרי ללא אישור מראש ובכתב מהנהלת האתר.\n\n2.3. חל איסור מוחלט לבצע באתר כל פעולה בלתי חוקית, להפר זכויות יוצרים או לפגוע בכל דרך אחרת בהנהלת האתר, במשתמשים אחרים או בצדדים שלישיים.\n\n2.4. הנהלת האתר שומרת לעצמה את הזכות למנוע גישה למשתמשים אשר מפרים את תנאי השימוש, ללא צורך במתן הודעה מוקדמת.\n\n3. סוגי התכנים והשימוש בחנות הדיגיטלית\n\n3.1. האתר כולל תכנים מקוריים, מידע על מוצרים, פרסומים ועדכונים.\n\n3.2. אין להעתיק, לשכפל, להפיץ, לפרסם או להשתמש בכל דרך אחרת בתכנים מהאתר ללא אישור מראש ובכתב מהנהלת האתר.\n\n4. הזמנת מוצרים ושירותים דרך האתר\n\n4.1. כל הרכישות באתר כפופות לזמינות המלאי. במקרה של חוסר במלאי, הלקוח יקבל הודעה ויוכל לבחור להמתין או לבטל את ההזמנה.\n\n4.2. הזמנה תאושר רק לאחר פרעון התשלום במלואו באמצעות כרטיס אשראי  Apple pay,Googel pay, ביט  ובכפוף לאישור חברת הסליקה.\n\n4.3. מחירי המוצרים כוללים מע\"מ, אלא אם צוין אחרת במפורש.\n\n5. משלוח  ואיסוף עצמי בישראל\n\n5.1. המוצרים יסופקו לכתובת הלקוח בהתאם לבחירתו בעת הרכישה.\n\n5.2. מועד אספקת המשלוח מוערך בכ- 7 ימי עסקים בהתאם ליעד שנבחר.\n\n5.3 ימי עסקים הינם ימי א' עד ה', לא כולל ימי שישי,שבת,שבתון,ערבי חג וימי חג.\n\n5.4. אפשרות לאיסוף עצמי תינתן בתיאום טלפוני ללא עלות .\n\n6. הוראות כלליות בעניין משלוחים ואספקת מוצרים\n\n6.1 אספקת הפריטים שנרכשו מתבצעת באמצעות חברת משלוחים חיצונית, במקרים בהם לא ניתן לקבל את שירות חברת המשלוחים ליישוב מסוים, ניתן לתאם מקום מתאים ונוח חלופי.\n\n6.2. הנהלת האתר אינה אחראית על עיכובים הנובעים מגורמים חיצוניים כגון חברת השליחויות מצב חירום ביטחוני שביתות או כוח עליון.\n\n6.3. על הלקוח לוודא כי הפרטים שמסר למשלוח נכונים ומדויקים.\n\n7. מדיניות ביטול והחזרת מוצרים\n\n7.1. הלקוח רשאי להחזיר פריט תוך 14 ימים מקבלת המוצר, על פי חוק הגנת הצרכן לאחר מילוי טופס החזרות, בתנאי שלא נעשה בו שימוש, המוצר אינו פגום והוא נושא את התווית המקורית.\n\n7.2. ניתן לקבל זיכוי לחנות או החזר כספי אשר יבוצע באותו אמצעי תשלום בו בוצעה הרכישה עד 12 ימי עסקים מיום קבלת הפריט. החזר כספי לכרטיס אשראי יופיע בפירוט האשראי תוך 21 ימי עסקים.\n\n7.3. במידה ותבחרי להחזיר פריט דרך שליח, דמי המשלוח יקוזזו מעלות הפריט - בעלות דמי משלוח של 30 ₪, אשר יקוזזו מסכום הזיכוי. תיאום המשלוח יתבצע דרכנו.\n\n8. קישורים, פרסומות והפניות מהאתר\n\n8.1. האתר עשוי לכלול קישורים לאתרים חיצוניים. הנהלת האתר אינה אחראית לתוכן או להתנהלות של אתרים אלו.\n\n8.2. כל עסקה שתתבצע מול צד שלישי דרך קישור מהאתר היא באחריות הלקוח בלבד.\n\n9. זכויות בעלות וזכויות קניין רוחני\n\n9.1. כל הזכויות על התכנים, התמונות, העיצובים, הלוגואים, הטקסטים וכל רכיב אחר באתר הם רכושו הבלעדי של בעל האתר ומוגנים על פי חוקי הקניין הרוחני.\n\n9.2. אין להעתיק, לשכפל, להפיץ, לפרסם, למכור או להשתמש בכל דרך אחרת בתכני האתר ללא אישור מראש ובכתב מהנהלת האתר.\n\n10. שימוש בתכני האתר\n\n10.1. אין להעלות לאתר תכנים פוגעניים, בלתי חוקיים או שעלולים לפגוע בזכויות צדדים שלישיים.\n\n10.2. הנהלת האתר רשאית להסיר כל תוכן שיימצא לא ראוי או מפר את תנאי השימוש.\n\n11. פטור מאחריות ושיפוי\n\n11.1. הנהלת האתר אינה אחראית לכל נזק ישיר או עקיף שייגרם כתוצאה משימוש באתר, מתקלות טכניות או משימוש לא תקין.\n\n11.2. האתר מספק מידע \"כפי שהוא\" (As-Is), ואין לראות בו הבטחה לתוצאה מסוימת, המלצה או ייעוץ מקצועי.\n\n11.3. המשתמש מתחייב לשפות את הנהלת האתר בגין כל טענה, תביעה או נזק שייגרם עקב הפרת תנאי השימוש על ידו.\n\n12. סמכות שיפוט\n\n12.1. על התקנון ותנאי השימוש יחולו אך ורק דיני מדינת ישראל.\n\n12.2. כל מחלוקת שתתגלה בין הצדדים תידון בבתי המשפט המוסמכים במחוז שבו רשומה הנהלת האתר.\n\n13. שינויים בתנאי השימוש\n\n13.1. הנהלת האתר רשאית לעדכן את תנאי השימוש מעת לעת לפי שיקול דעתה הבלעדי.\n\n13.2. שימוש מתמשך באתר לאחר עדכון התקנון יהווה הסכמה לתנאים החדשים.\n\n14. יצירת קשר\n\n14.1. נשמח לעמוד לרשותכם לכל שאלה או הבהרה:\n\nטלפון:055-994-6060\n\nE mail: Brand@rotmina.com"
+    "section15": {
+      "title": "15. יצירת קשר",
+      "15.1": "15.1. נשמח לעמוד לרשותכם לכל שאלה או הבהרה:",
+      "tel": "טלפון:055-994-6060",
+      "address": "ראשון לציון ,ישראל.",
+      "email": "אימייל: Brand@rotmina.com"
+    },
+    "fullText": "תנאי שימוש באתר\n\n1. כללי\n\n1.1. תקנון זה מהווה הסכם משפטי מחייב בין המשתמשים באתר לבין הנהלת האתר (להלן: \"האתר\").\n\n1.2. כל כניסה לאתר, גלישה, רישום, ביצוע רכישה או כל שימוש אחר באתר מהווים הסכמה מלאה לתנאי התקנון.\n\n1.3. הנהלת האתר רשאית לעדכן את התקנון מעת לעת, לפי שיקול דעתה הבלעדי וללא צורך בהודעה מוקדמת.\n\n1.4. בכל מקרה של סתירה בין תקנון זה לבין כל פרסום אחר, יגברו תנאי התקנון.\n\n2. תנאי שימוש וגישה לאתר\n\n2.1. השימוש באתר מותר למי שמלאו לו 18 שנים. קטינים מתחת לגיל 18 רשאים לבצע רכישות רק באישור הורה או אפוטרופוס.\n\n2.2. האתר מיועד לשימוש אישי בלבד, ואין לעשות בו שימוש מסחרי ללא אישור מראש ובכתב מהנהלת האתר.\n\n2.3. חל איסור מוחלט לבצע באתר כל פעולה בלתי חוקית, להפר זכויות יוצרים או לפגוע בכל דרך אחרת בהנהלת האתר, במשתמשים אחרים או בצדדים שלישיים.\n\n2.4. הנהלת האתר שומרת לעצמה את הזכות למנוע גישה למשתמשים אשר מפרים את תנאי השימוש, ללא צורך במתן הודעה מוקדמת.\n\n3. סוגי התכנים והשימוש בחנות הדיגיטלית\n\n3.1. האתר כולל תכנים מקוריים, מידע על מוצרים, פרסומים ועדכונים.\n\n3.2. אין להעתיק, לשכפל, להפיץ, לפרסם או להשתמש בכל דרך אחרת בתכנים מהאתר ללא אישור מראש ובכתב מהנהלת האתר.\n\n4. הזמנת מוצרים ושירותים דרך האתר\n\n4.1. כל הרכישות באתר כפופות לזמינות המלאי. במקרה של חוסר במלאי, הלקוח יקבל הודעה ויוכל לבחור להמתין או לבטל את ההזמנה.\n\n4.2. הזמנה תאושר רק לאחר פרעון התשלום במלואו באמצעות כרטיס אשראי  Apple pay,Googel pay,\n\nביט  ובכפוף לאישור חברת הסליקה.\n\n4.3. מחירי המוצרים כוללים מע\"מ, אלא אם צוין אחרת במפורש.\n\n5. משלוח  ואיסוף עצמי בישראל\n\n5.1. המוצרים יסופקו לכתובת הלקוח בהתאם לבחירתו בעת הרכישה.\n\n5.2. מועד אספקת המשלוח מוערך בכ- 7 ימי עסקים בהתאם ליעד שנבחר.\n\n5.3 ימי עסקים הינם ימי א' עד ה', לא כולל ימי שישי,שבת,שבתון,ערבי חג וימי חג.\n\n5.4. אפשרות לאיסוף עצמי תינתן בתיאום טלפוני ללא עלות .\n\n6. הוראות כלליות בעניין משלוחים ואספקת מוצרים\n\n6.1 אספקת הפריטים שנרכשו מתבצעת באמצעות חברת משלוחים חיצונית, במקרים בהם לא ניתן לקבל את שירות חברת המשלוחים ליישוב מסוים, ניתן לתאם מקום מתאים ונוח חלופי.\n\n6.2. הנהלת האתר אינה אחראית על עיכובים הנובעים מגורמים חיצוניים כגון חברת השליחויות מצב חירום ביטחוני שביתות או כוח עליון.\n\n6.3. על הלקוח לוודא כי הפרטים שמסר למשלוח נכונים ומדויקים.\n\n7. מדיניות ביטול והחזרת מוצרים\n\n7.1. הלקוח רשאי להחזיר פריט תוך 14 ימים מקבלת המוצר, על פי חוק הגנת הצרכן לאחר מילוי טופס החזרות, בתנאי שלא נעשה בו שימוש, המוצר אינו פגום והוא נושא את התווית המקורית.\n\n7.2. ניתן לקבל זיכוי לחנות או החזר כספי אשר יבוצע באותו אמצעי תשלום בו בוצעה הרכישה עד 12 ימי עסקים מיום קבלת הפריט. החזר כספי לכרטיס אשראי יופיע בפירוט האשראי תוך 21 ימי עסקים.\n\n7.3. במידה ותבחרי להחזיר פריט דרך שליח, דמי המשלוח יקוזזו מעלות הפריט - בעלות דמי משלוח של 30 ₪, אשר יקוזזו מסכום הזיכוי. תיאום המשלוח יתבצע דרכנו.\n\n7.4. מדיניות ביטול והחזרת מוצרים לא תקינים - במידה ולקוח/ה מקבל/ת מוצר לא תקין, רשאי/ת הלקוח/ה ליצור קשר עם שירות הלקוחות של החברה מיד עם קבלת המשלוח, ולהעביר צילום ברור של הפגם או התקלה באמצעות דואר אלקטרוני או הודעת WhatsApp. לאחר קבלת הפנייה והצילום, החברה תבחן את הנושא ותטפל במקרה בהתאם, לרבות החלפת המוצר, זיכוי או כל פתרון אחר לפי שיקול דעתה.\n\n8. קישורים, פרסומות והפניות מהאתר\n\n8.1. האתר עשוי לכלול קישורים לאתרים חיצוניים. הנהלת האתר אינה אחראית לתוכן או להתנהלות של אתרים אלו.\n\n8.2. כל עסקה שתתבצע מול צד שלישי דרך קישור מהאתר היא באחריות הלקוח בלבד.\n\n9. זכויות בעלות וזכויות קניין רוחני\n\n9.1. כל הזכויות על התכנים, התמונות, העיצובים, הלוגואים, הטקסטים וכל רכיב אחר באתר הם רכושו הבלעדי של בעל האתר ומוגנים על פי חוקי הקניין הרוחני.\n\n9.2. אין להעתיק, לשכפל, להפיץ, לפרסם, למכור או להשתמש בכל דרך אחרת בתכני האתר ללא אישור מראש ובכתב מהנהלת האתר.\n\n10. שימוש בתכני האתר\n\n10.1. אין להעלות לאתר תכנים פוגעניים, בלתי חוקיים או שעלולים לפגוע בזכויות צדדים שלישיים.\n\n10.2. הנהלת האתר רשאית להסיר כל תוכן שיימצא לא ראוי או מפר את תנאי השימוש.\n\n11. פטור מאחריות ושיפוי\n\n11.1. הנהלת האתר אינה אחראית לכל נזק ישיר או עקיף שייגרם כתוצאה משימוש באתר, מתקלות טכניות או משימוש לא תקין.\n\n11.2. האתר מספק מידע \"כפי שהוא\" (As-Is), ואין לראות בו הבטחה לתוצאה מסוימת, המלצה או ייעוץ מקצועי.\n\n11.3. המשתמש מתחייב לשפות את הנהלת האתר בגין כל טענה, תביעה או נזק שייגרם עקב הפרת תנאי השימוש על ידו.\n\n12. סמכות שיפוט\n\n12.1. על התקנון ותנאי השימוש יחולו אך ורק דיני מדינת ישראל.\n\n12.2. כל מחלוקת שתתגלה בין הצדדים תידון בבתי המשפט המוסמכים במחוז שבו רשומה הנהלת האתר.\n\n13. שינויים בתנאי השימוש\n\n13.1. הנהלת האתר רשאית לעדכן את תנאי השימוש מעת לעת לפי שיקול דעתה הבלעדי.\n\n13.2. שימוש מתמשך באתר לאחר עדכון התקנון יהווה הסכמה לתנאים החדשים.\n\n14.מדיניות פרטיות\n\n14.1. מדיניות הפרטיות של האתר מהווה חלק בלתי נפרד מתקנון זה וכל שימוש באתר כפוף גם להוראות המפורטות בה\n\n15. יצירת קשר\n\n15.1. נשמח לעמוד לרשותכם לכל שאלה או הבהרה:\n\nטלפון:055-994-6060  \n\nראשון לציון ,ישראל.\n\nאימייל: Brand@rotmina.com"
   },
   "orderHistory": {
     "order": "מספר הזמנה",
@@ -424,6 +435,7 @@
     "facebook": "פייסבוק",
     "phone": "972-55-994-6060+",
     "email": "Brand@rotmina.com",
+    "address": "ראשון לציון, ישראל",
     "description": "יש לך שאלות או משוב? מוזמנת לפנות אלינו. שלחו לנו את ההודעה בשדה למטה ונחזור אליכם בהקדם.",
     "name": "שם",
     "emailPlaceholder": "אימייל",
