fixed order modal

--- a/locales/he.json
+++ b/locales/he.json
@@ -169,10 +169,10 @@
     "incorrect": "שגוי"
   },
   "orderConfirm": {
-    "title": "הזמנה אושרה!",
-    "yourOrder": "ההזמנה שלך מס'",
-    "thankYou": "תודה שבחרת ברוטמינה. מייל אישור בדרך אלייך, ההזמנה שלך נארזת בקפידה ותישלח בקרוב.",
-    "exploreMore": "גלי עוד",
+    "title": "הזמנה אושרה !תתחדשי",
+    "yourOrder": "הזמנתך מספר",
+    "thankYou": "תודה שבחרת רותמינה אישור ההזמנה בדרך אלייך למייל. ההזמנה נארזת בהקפדה ותצא אלייך בקרוב.",
+    "exploreMore": "מוזמנת להתרשם",
     "payForOrder": "שלם עבור ההזמנה"
   },
   "successPayment": {
