--- a/locales/he.json
+++ b/locales/he.json
@@ -171,13 +171,13 @@
   "orderConfirm": {
     "title": "הזמנה אושרה !תתחדשי",
     "yourOrder": "הזמנתך מספר",
-    "thankYou": "תודה שבחרת רותמינה אישור ההזמנה בדרך אלייך למייל. ההזמנה נארזת בהקפדה ותצא אלייך בקרוב.",
+    "thankYou": "תודה שבחרת רותמינה, אישור ההזמנה בדרך אלייך למייל! ההזמנה נארזת בקפידה ותצא אלייך בקרוב",
     "exploreMore": "מוזמנת להתרשם",
     "payForOrder": "שלם עבור ההזמנה"
   },
   "successPayment": {
-    "title": "התשלום בוצע בהצלחה!",
-    "thankYou": "תודה שבחרת ברוטמינה. ההזמנה שלך נארזת בקפידה ותישלח בקרוב.",
+    "title": "!התשלום בוצע בהצלחה",
+    "thankYou": ".תודה שבחרת ברוטמינה. ההזמנה שלך נארזת בקפידה ותישלח בקרוב",
     "exploreMore": "גלי עוד"
   },
   "cartPage": {
@@ -208,7 +208,7 @@
     "city": "עיר",
     "zipCode": "מיקוד",
     "adding": "מוסיף...",
-    "addNewAddress": "הוסף כתובת חדשה"
+    "addNewAddress": "הוסף כתובת"
   },
   "payment": {
     "home": "בית",
@@ -220,7 +220,7 @@
     "nameOnCard": "שם על הכרטיס",
     "cardNumber": "מספר כרטיס",
     "telephone": "טלפון",
-    "expDate": "תאריך תפוגה",
+    "expDate": "תאריך תפוגה MM/YY",
     "cvv": "CVV",
     "iHaveReadAndAgree": "אני קראתי ומסכים/ה עם",
     "pay": "שלם",
