--- a/locales/he.json
+++ b/locales/he.json
@@ -575,6 +575,12 @@
     "packagingCommitment": "רותמינה תמשיך להיות קשובה לצרכי הסביבה ומחויבת לשיפור מתמיד של פעולתה כדי להימנע מפגיעה סביבתית, המותג ער להתפתחויות הטכנולוגיות ולקדמה בתחום הקיימות ויחפש תמיד דרכים חדשות להקטין את השפעתו הסביבתית ולהוות חלק מפתרון גלובלי.",
     "packagingData": "הנתונים נתמכים ע\"י דו\"חות גופים סביבתיים מוכרים:",
     "packagingOrganizations": "Environmental Protection Agency (EPA) המתמקדים ו -World Resources Institute (WRI) בקיימות, הפחתת פליטות והפחתת פסולת עולמית."
+  },
+  "sorryModal": {
+    "title": "מצטערת",
+    "description1": "משהו השתבש",
+    "description2": "לא ניתן לאשר את ההזמנה כרגע",
+    "buttonText": "נסי שוב"
   }
 }
 
